# MIDAS

./: .gitignore  README.md  pyproject.toml
src/MIDAS/: __init__.py  adaptive.py  adl_midas.py  align.py  backtest.py  bands.py  base.py  benchmarks.py  boosted_midas.py  combine.py  data_conflict.py  data_epu.py  data_macro.py  data_nbs_china.py  dfm.py  evaluation.py  forecasting.py  gb_trees.py  interp_plots.py  metadata.py  midas.py  ml.py  nowcast_plots.py  optim_func.py  panel.py  plotting.py  polynomials.py  preprocess.py  realtime.py  recession.py  scmidas.py  sparse_midas.py  tables.py
tutorial/: MIDAS_Tutorial.ipynb  macro_dataset.csv
