[project]
name = "MIDAS"
version = "0.1.0"
description = "Mixed Data Sampling for Time-Series Nowcasting and Forecasting."
authors = [
  { name = "Renato Vassallo", email = "renato.vassallo@bse.eu" }
]
readme = "README.md"
requires-python = ">=3.11,<3.12"

dependencies = [
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "statsmodels>=0.14.4",
]

[dependency-groups]
dev = [
    "pyarrow>=20.0.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "matplotlib>=3.10.1",
    "python-dotenv>=1.1.0",
    "seaborn>=0.13.2"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
