[project]
name = "MIDAS"
version = "0.2.0"
description = "Mixed-frequency nowcasting and forecasting tools with macro and text examples."
authors = [
  { name = "Renato Vassallo", email = "renato.vassallo@bse.eu" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.12"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "scipy>=1.11",
  "scikit-learn>=1.4",
  "matplotlib>=3.8",
  "requests>=2.31",
  "pyarrow>=14",
]

[dependency-groups]
dev = [
  "ipykernel>=6.29",
  "jupyter>=1.0",
  "nbclient>=0.10",
  "nbconvert>=7.16",
  "nbformat>=5.10",
  "python-dotenv>=1.0",
  "xgboost>=2.0",
  "shap>=0.44",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true
